# ops-pilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  OpsPilot_需求与设计文档.md  README.md  api_logs.txt  docker-compose.streaming.yml  docker-compose.yml  pyproject.toml  requirements.txt  saiti1.txt  saiti2.txt  test_api.py
.claude/: settings.local.json
.trae/documents/: analysis_report.md  plan.md
data/bootstrap/: README.md  companies.json  evidence.json
data/reference/: innovation_radar_2026.json
data/universe/: formal_company_pool.json
docs/: colab_quickstart.md  ocr_delivery_runbook.md  streaming_runbook.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: router.ts  styles.css
frontend/src/components/: AppShell.vue  ChartPanel.vue  ErrorState.vue  LoadingState.vue  StatCard.vue  TagPill.vue
frontend/src/composables/: useAsyncState.ts  useWorkspaceRole.ts
frontend/src/lib/: api.ts  format.ts  (+2 more)
scripts/: clean-workspace.ps1  colab_verify_paddleocr_vl.py  start-core.ps1  start-streaming.ps1  stop-local-stack.ps1
src/opspilot/: config.py  delivery_report.py  init_ocr_assets.py  main.py  runtime_checks.py
streaming/flink/: industry_signal_features.sql  industry_signal_lakehouse.sql
tests/: test_agents.py  test_auth_store.py  test_evidence_runtime.py  test_hybrid_repository.py  test_manifest_utils.py  test_official_clients.py  test_official_repository.py  test_pdf_bronze.py  test_scoring_engine.py  test_services.py  test_signal_stream.py  test_silver_metrics.py  test_snapshot_silver.py
(+81 files in other folders)
